# upnp-lib-qt

./: .clang-format  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  UPNPQTConfig.cmake.in  UpnpLibQtConfig.cmake.in  upnplibqt.categories  upnplibqt.categories.license
autotests/: CMakeLists.txt  ssdpsockettests.cpp  ssdptests.cpp  upnpdevicemodeltests.cpp
data/: AndroidManifest.xml
src/: AudioTrackDelegate.qml  CMakeLists.txt  MediaContentDirectory.qml  MediaPlayListView.qml  MediaPlayerControl.qml  PlayListControler.qml  binaryLight.qml  binarylight.cpp  binarylight.h  genericDevice.qml  main.cpp  main.qml  mediaAlbumView.qml  mediaAlbumViewMobile.qml  mediaServer.qml  mediaServerListing.qml  mediaServerListingMobile.qml  mediaplaylist.cpp  mediaplaylist.h  upnpControl.cpp  upnpControl.qml  upnpControl.qrc  upnpControlMobile.cpp  upnpControlMobile.qml  upnpControlMobile.qrc  upnpabstractdevice.cpp  upnpabstractdevice.h  upnpabstractservice.cpp  upnpabstractservice.h  upnpabstractservicedescription.cpp  upnpabstractservicedescription.h  upnpactiondescription.cpp  upnpactiondescription.h  upnpbasictypes.h  upnpbinarylight.cpp  upnpbinarylight.h  upnpcontentdirectorymodel.cpp  upnpcontentdirectorymodel.h  upnpcontrolabstractdevice.cpp  upnpcontrolabstractdevice.h  (+51 more)
src/base/: CMakeLists.txt  upnpactiondescription.cpp  upnpactiondescription.h  upnpdevicedescription.cpp  upnpdevicedescription.h  upnpservicedescription.cpp  upnpservicedescription.h  upnpstatevariabledescription.cpp  upnpstatevariabledescription.h
src/upnp/: CMakeLists.txt  mediaplaylist.h  upnpabstractdevice.cpp  upnpabstractdevice.h  upnpabstractservice.cpp  upnpabstractservice.h  upnpbinarylight.cpp  upnpbinarylight.h  upnpcontentdirectorymodel.cpp  upnpcontentdirectorymodel.h  upnpcontrolabstractdevice.cpp  upnpcontrolabstractdevice.h  upnpcontrolabstractservice.cpp  upnpcontrolabstractservice.h  upnpcontrolabstractservicereply.cpp  upnpcontrolabstractservicereply.h  upnpcontrolconnectionmanager.cpp  upnpcontrolcontentdirectory.cpp  upnpcontroldimming.cpp  upnpcontrolmediaserver.h  upnpcontrolswitchpower.cpp  upnpdevicedescriptionparser.cpp  upnpdevicedescriptionparser.h  upnpdevicemodel.cpp  upnpdevicemodel.h  upnpdevicesoapserverobject.cpp  upnpdiscoveryresult.cpp  upnpdiscoveryresult.h  upnpeventsubscriber.cpp  upnpeventsubscriber.h  upnphttpserver.cpp  upnphttpserver.h  upnpservereventobject.cpp  upnpservereventobject.h  upnpservicedescriptionparser.cpp  upnpservicedescriptionparser.h  upnpssdpengine.cpp  upnpssdpengine.h  upnpswitchpower.cpp
src/websocket/: CMakeLists.txt  upnpproxywebsocket.cpp  upnpproxywebsocket.h  upnpserverwebsocket.cpp  upnpserverwebsocket.h  upnpwebsocketabstractservicecontrol.cpp  upnpwebsocketabstractservicecontrol.h  upnpwebsocketbaseclient.cpp  upnpwebsocketbaseclient.h  upnpwebsocketcertificateconfiguration.cpp  upnpwebsocketcertificateconfiguration.h  upnpwebsocketclient.cpp  upnpwebsocketclient.h  upnpwebsocketcommon.cpp  upnpwebsocketcommon.h  upnpwebsocketdevicenotifier.cpp  upnpwebsocketdevicenotifier.h  upnpwebsocketeventsubscriber.cpp  upnpwebsocketeventsubscriber.h  upnpwebsocketinternalclient.cpp  upnpwebsocketinternalclient.h  upnpwebsocketpublisher.cpp  upnpwebsocketpublisher.h  upnpwebsocketserversocket.cpp  upnpwebsocketserversocket.h
tests/: AudioTrackDelegate.qml  CMakeLists.txt  HeaderBar.qml  MediaAlbumView.qml  MediaContentDirectory.qml  MediaPlayListView.qml  MediaPlayerControl.qml  MediaPlayerControlMobile.qml  MediaServer.qml  MediaServerListing.qml  PlayListControler.qml  mediaAlbumView.qml  mediaServer.qml  mediaServerListing.qml  mediaServerMobile.qml  mediaplaylist.cpp  mediaplaylist.h  playlistcontroler.cpp  playlistcontroler.h  ssdplistener.cpp  ssdptests.cpp  upnpControl.cpp  upnpControl.qml  upnpControl.qrc  upnpControlMobile.cpp  upnpControlMobile.qrc  viewpagesmodel.cpp  viewpagesmodel.h
tests/mobilecomponents/: mobilecomponentsplugin.cpp
tests/mobilecomponents/private/: mobilecomponentsprivateplugin.cpp
tests/upnp-web-socket-proxy/: BinaryLightControl.qml  CMakeLists.txt  abstractrelayactuator.cpp  abstractrelayactuator.h  binaryLight.cpp  binaryLight.qml  binaryLight.qrc  client.cpp  client.qml  client.qrc  olinuxinoremoterelay.cpp  olinuxinoremoterelay.h  proxy.cpp  proxy.qml  proxy.qrc  upnpbinarylight.cpp  upnpbinarylight.h  upnpswitchpower.cpp  upnpswitchpower.h  upnpwebsocketcontrolswitchpower.cpp  upnpwebsocketcontrolswitchpower.h  upnpwebsocketdevicemodel.cpp  upnpwebsocketdevicemodel.h
